# generation_model_study

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  hello.py  pyproject.toml
src/classifier_free_guidance/: inference.py  model.py  train.py
src/diffusion_model/: inference.py  model.py  train.py
src/em/: em.py
src/gaussian_mixture_model/: gaussian_mixture_model copy.py  gaussian_mixture_model.py
src/multivariate_normal/: maximam_likehood_estimation.py  multivariate_normal_plot.py  plot_test.py
src/vae/: inference.py  model.py  train.py
